--- a/index2.html
+++ b/index2.html
@@ -34,7 +34,7 @@
                 <li>Meetups</li>
                 <li>Clases de Repaso</li>
             </ul>
-        <li><h3>Contenido teórico-práctico</h3></li>
+        <li><h3>Contenido Teórico-práctico</h3></li>
             <ul>
                 <li>Teórico: <ul>
                     <li>Documentaciones</li>
